[gd_scene load_steps=6 format=2]

[ext_resource path="res://gameplay/race-mode/FinishLine.gd" type="Script" id=1]
[ext_resource path="res://gameplay/objects/PullableObject.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/elements/line.png" type="Texture" id=3]
[ext_resource path="res://assets/sound/sfx/finish_line.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "float"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PullableObjectTop/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PullableObjectTop/Hitbox:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PullableObjectBot/Hitbox:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PullableObjectBot/Sprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ) ]
}

[node name="FinishLine" type="Node2D"]
script = ExtResource( 1 )

[node name="LineArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 256
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LineArea"]

[node name="PullableObjectBot" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 300 )

[node name="Sprite" parent="PullableObjectBot" index="0"]
position = Vector2( 0, 5 )

[node name="Hitbox" parent="PullableObjectBot" index="1"]
position = Vector2( 0, 5 )

[node name="Line" type="TextureRect" parent="PullableObjectBot"]
show_behind_parent = true
margin_top = -57.5
margin_right = 642.0
margin_bottom = 57.5
rect_pivot_offset = Vector2( 0, 57.5 )
texture = ExtResource( 3 )
stretch_mode = 2

[node name="PullableObjectTop" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -300 )

[node name="Sprite" parent="PullableObjectTop" index="0"]
position = Vector2( 0, 5 )

[node name="Hitbox" parent="PullableObjectTop" index="1"]
editor/display_folded = true
position = Vector2( 0, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 1 )

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.245
[connection signal="area_entered" from="LineArea" to="." method="_on_LineArea_area_entered"]
[connection signal="hooked" from="PullableObjectBot" to="." method="_on_PullableObjectBot_hooked"]
[connection signal="unhooked" from="PullableObjectBot" to="." method="_on_PullableObjectBot_unhooked"]
[connection signal="hooked" from="PullableObjectTop" to="." method="_on_PullableObjectTop_hooked"]
[connection signal="unhooked" from="PullableObjectTop" to="." method="_on_PullableObjectTop_unhooked"]

[editable path="PullableObjectBot"]

[editable path="PullableObjectTop"]
